--- a/app.json
+++ b/app.json
@@ -6,8 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode":"cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
